# Predict_NextWord

./: .gitignore  README.txt  REPORT.txt  RUN.txt  TRAINING_HISTORY.txt  pyproject.toml
data/: sherlock_holmes.txt
notebooks/: next_word_prediction.ipynb
outputs/: assignment_text.txt  generated_examples.txt  make_real_metrics.py  make_test_metrics.py
src/: Visualizetrain.py  __init__.py  config.py  data_loader.py  evaluate.py  generate.py  model.py  model_glove.py  preprocessor.py  test.py  train.py  visualization.py  visualizetest.py
