[project]
name = "next-word-prediction"
version = "0.1.0"
description = "Next-Word Prediction using LSTM + Attention on Sherlock Holmes corpus"
requires-python = ">=3.9"

dependencies = [
    # Intel macOS has no modern TensorFlow wheels; tensorflow-macos 2.12 is the
    # last practical choice there. Apple Silicon/Linux/Windows use modern TF.
    "tensorflow-macos>=2.12.0,<2.13.0; sys_platform == 'darwin' and platform_machine == 'x86_64'",
    "tensorflow>=2.16.0,<2.21.0; sys_platform != 'darwin' or platform_machine != 'x86_64'",
    "keras>=2.12.0,<2.13.0; sys_platform == 'darwin' and platform_machine == 'x86_64'",
    "keras>=3.0.0,<4.0.0; sys_platform != 'darwin' or platform_machine != 'x86_64'",
    "numpy>=1.22.0,<2.0.0; sys_platform == 'darwin' and platform_machine == 'x86_64'",
    "numpy>=1.26.0,<2.1.0; sys_platform != 'darwin' or platform_machine != 'x86_64'",
    "matplotlib>=3.7.0",
    "requests>=2.31.0",
    "scikit-learn>=1.3.0",
    "jupyter>=1.0.0",
    "ipykernel>=6.0.0",
    "seaborn>=0.12.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
package = false
dev-dependencies = [
    "black>=23.0.0",
    "isort>=5.12.0",
]

[tool.black]
line-length = 100

[tool.isort]
profile = "black"
